--- a/css/style.css
+++ b/css/style.css
@@ -41,20 +41,6 @@ button {
     margin-right: auto;
     margin-left: auto;
 }
-.our-job-head, 
-.team-head, 
-.first-button {
-    text-align: center;
-}
-.team-list, 
-.our-job-list, 
-.details-list, .header, 
-.header-navigation-list, 
-.header-navigation, 
-.header-contacts-list,
-.portfolio-buttons {
-    display: flex;
-}
 .section{
     padding-top: 94px;
     padding-bottom: 94px;
@@ -70,27 +56,29 @@ button {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
     margin: -1px;
-  }
+}
 
 /*--------------------------------------HEADER-------------------------------------------*/
 
 .header {
+    display: flex;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid var(--border-one);
 }
-.header-conteiner {
+.header__container {
     display: inline-flex;
 }
-.header-navigation {
+.navigation {
     align-items: center;
+    display: flex;
 
 }
-.header-logo {
+.header__logo {
     padding-top: 24px;
     padding-bottom: 25px;
 }
-.web {
+.logo {
     font-family: 'Raleway';
     color: var(--sending);
     text-decoration: none;
@@ -100,17 +88,18 @@ button {
     letter-spacing: 0.03em;
     margin-right: 92px;
 }
-.header-web {
+.logo--dark {
     color: var(--black);
 }
-.header-navigation-list {
+.navigation-list {
+    display: flex;
 
 
 }
-.header-navigation-item {
+.navigation-list__item {
 
 }
-.header-nav-item {
+.navigation-list__link {
     position: relative;
     font-family: 'Roboto';
     font-weight: 500;
@@ -123,25 +112,26 @@ button {
     padding-bottom: 32px;
 
 }
-.header-contacts-list {
+.contacts {
+    display: flex;
     align-items: center;
     margin-left: auto;
 }
-.header-contact-li {
+.contacts__item {
 }
-.header-mail-icon {
+.contacts__mail-icon {
     width: 16px;
     height: 12px;
     margin-right: 10px;
     fill: currentColor;
 }
-.header-phone-icon {
+.contacts__tel-icon {
     width: 10px;
     height: 16px;
     margin-right: 10px;
     fill: currentColor;
 }
-.header-contacts-item {
+.contacts__link {
     font-family: 'Roboto';
     font-weight: 500;
     line-height: 1.1;
@@ -153,13 +143,13 @@ button {
     padding-top: 32px;
     padding-bottom: 32px;
 }
-.header-contact-li+.header-contact-li {
+.contacts__item + .contacts__item {
     margin-left: 50px;
 }
-.header-active {
+.navigation-list__link--active {
     color: var(--send-two);
 }
-.header-active::after {
+.navigation-list__link--active::after {
     content: '';
     position: absolute;
     bottom: -1px;
@@ -169,20 +159,20 @@ button {
     height: 4px;
     width: 100%;
 }
-.header-nav-item:hover, 
-.header-nav-item:focus, 
-.header-contacts-item:hover, 
-.header-contacts-item:focus {
+.navigation-list__link:hover, 
+.navigation-list__link:focus, 
+.contacts__link:hover, 
+.contacts__link:focus {
     position: relative;
     color: var(--sending);
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-mail-icon:hover,
-.header-mail-icon:focus,
-.header-phone-icon:hover,
-.header-phone-icon:focus {
+.contacts__mail-icon:hover,
+.contacts__mail-icon:focus,
+.contacts__tel-icon:hover,
+.contacts__tel-icon:focus {
     fill: currentColor;
     transition-property: color;
     transition-duration: 250ms;
@@ -200,51 +190,50 @@ footer {
     display: flex;
     align-items: baseline;
 }
-.footer-part-first {
+/* .footer-part-first {
 
-}
-.footer-web {
+} */
+.logo--light{
     color: var(--main);
 }
-.footer-list {
+.footer-adress {
     padding-left: 0;
     width: 231px;
 }
-.footer-addrerss {
+.footer-adress-list {
     font-style: normal;
     margin-top: 20px;
 }
-.footer-addrerss-item {
+.footer-adress-list__item {
     color: var(--main);
     margin-bottom: 0;
     line-height: 1.7;
     font-weight: 400;
     margin-bottom: 9px;
 }
-.footer-addrerss-tel, 
-.footer-addrerss-mail {
+.footer-adress-list__link {
     color: var(--second-main);
     line-height: 1.7;
     font-weight: 400;
     text-decoration: none;
 }
-.footer-addrerss-tel:hover, 
-.footer-addrerss-mail:hover, 
-.footer-addrerss-tel:focus, 
-.footer-addrerss-mail:focus {
+.footer-adress-list__link:hover, 
+.footer-adress-list__link:hover, 
+.footer-adress-list__link:focus, 
+.footer-adress-list__link:focus {
     color: var(--sending);
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 } 
-.footer-addrerss-mail {
+.footer-adress-list__link {
     margin-bottom: 9px;
     display: block;
 }
-.footer-connection {
+.footer-contacts {
     margin-left: 70px;
 }
-.ftcnt-head {
+.footer-contacts__head {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 14px;
@@ -253,10 +242,10 @@ footer {
     color: var(--main);
     margin-bottom: 20px;
 }
-.footer-connection-list {
+.footer-contacts-list {
     display: flex;
 }
-.footer-connection-item {
+.footer-contacts-list__item {
     width: 44px;
     height: 44px;
     margin-right: 10px;
@@ -264,17 +253,16 @@ footer {
     text-align: center;
     background: rgba(255, 255, 255,0.1);
 }
-.footer-connect-sending {
 
-}
-.footer-connect-icon {
+
+.footer-contacts__icon {
     width: 44px;
     height: 44px;
     padding: 12px;
     fill: var(--main);
 }
-.footer-connection-item:hover,
-.footer-connection-item:active {
+.footer-contacts-list__item:hover,
+.footer-contacts-list__item:active {
     background-color: var(--sending);
     opacity: 1;
     transition-property: background-color;
@@ -286,7 +274,7 @@ footer {
 
 /*------------------------------------phonetic-----------------------------------*/
 .phonetic-div {
-    margin-left: auto;
+    margin-left: 93px;
 }
 
 .phonetic {
@@ -297,7 +285,7 @@ footer {
 
 }
 
-.phonetic-text {
+.phonetic__text {
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
@@ -309,7 +297,7 @@ footer {
     
 }
 
-.phonetic-input {
+.phonetic__input {
     width: 358px;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -321,14 +309,14 @@ footer {
     color: rgba(255, 255, 255, 0.6);
 }
 
-.phonetic-input:hover,
-.phonetic-input:focus {
+.phonetic__input:hover,
+.phonetic__input:focus {
     border: 1px solid var(--sending);
     transition-property: border;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.phonetic-input::placeholder {
+.phonetic__input::placeholder {
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -339,7 +327,7 @@ footer {
     color: rgba(255, 255, 255, 0.6);
 }
 
-.phonetic-btn {
+.phonetic__btn {
     padding: 10px 28px;
     margin-left: 12px;   
     font-style: normal;
@@ -357,7 +345,7 @@ footer {
     border: none;
 }
 
-.phonetic-connect-icon {
+.phonetic__icon {
     width: 24px;
     height: 24px;
     margin-left: 10px;
@@ -365,9 +353,9 @@ footer {
 }
 
 
-/*-----------------------FIRST MAIN  SECTION-----------------------------------*/
+/*-----------------------HERO-----------------------------------*/
 
-.main-section {
+.hero {
     max-width: 1600px;
     margin: 0 auto;
     background-color: var(--back);
@@ -378,10 +366,8 @@ footer {
     padding-bottom: 200px;
     text-align: center;
 }
-.main-container {
 
-}
-.main-header {
+.hero__header {
     color: var(--main);
     font-weight: 900;
     font-size: 44px;
@@ -390,9 +376,10 @@ footer {
     text-transform: uppercase;
     margin-bottom: 30px;
 }
-.first-button {
+.hero__btn {
     color: var(--main);
     background-color: var(--sending);
+    text-align: center;
     font-family: inherit;
     font-weight: 700;
     font-size: 16px;
@@ -402,7 +389,7 @@ footer {
     border-radius: 4px;
     border: none;
 }
-.first-button:hover {
+.hero__btn:hover {
     background-color: var(--send-two);
     transition-property: background-color;
     transition-duration: 250ms;
@@ -412,13 +399,14 @@ footer {
 /*------------------------------------DETAILS-----------------------------------*/
 
 .details-list {
+    display: flex;
 
 }
-.details-item {
+.details-list__item {
     width: 270px;
     margin-right: 30px;
 }
-.details-icon-container {
+.icon-container {
     height: 120px;
     align-items: center;
     justify-content: center;
@@ -426,11 +414,11 @@ footer {
     background-color: var(--second-back);
     margin-bottom: 30px;
 }
-.details-icon {
+.details-list__icon {
     width: 70px;
     height: 70px;
 }
-.details-head {
+.details-list__head {
     font-family: 'Roboto';
     color: var(--main-text-color);
     font-weight: 700;
@@ -439,7 +427,7 @@ footer {
     text-transform: uppercase;
     margin-bottom: 10px;
 }
-.details-text {
+.details-list__text {
     color: var(--second-main);
     font-weight: 400;
     line-height: 1.7;
@@ -447,15 +435,16 @@ footer {
 
 /*--------------------------------------WORK-------------------------------------------*/
 
-.webpict {
+.work-list__image {
     max-width: 100%;
     display: block;
     height: auto;
 }
-.job {
+.work {
     padding-top: 0;
 }
-.our-job-head {
+.work__head {
+    text-align: center;
     color: var(--main-text-color);
     font-weight: 700;
     font-size: 36px;
@@ -464,15 +453,15 @@ footer {
     margin-bottom: 50px;
     margin-top: 0;
 }
-.our-job-list,
-.team-list {
+.work-list {
+    display: flex;
     justify-content: space-between;
     padding: 0;
 }
-.our-job-item {
+.work-list__item {
     position: relative;
 }
-.job-text {
+.work-list__text {
     position: absolute;
     width: 100%;
     height: 70px;
@@ -492,10 +481,10 @@ footer {
 
 /*--------------------------------------TEAM-------------------------------------------*/
 
-.team-section {
+.team {
     background-color: var(--second-back);
 }
-.team-head {
+.team__head {
     color: var(--main-text-color);
     font-weight: 700;
     font-size: 36px;
@@ -504,12 +493,18 @@ footer {
     margin-bottom: 50px;
     margin-top: 0;
 }
-.team-item {
+.team-list {
+    display: flex;
+        justify-content: space-between;
+        padding: 0;
+
+}
+.team-list__item {
     background-color: var(--main);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
-.name {
+.team-list__name {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.2;
@@ -517,7 +512,7 @@ footer {
     margin-bottom: 10px;
     margin-top: 30px;
 }
-.profession {
+.team-list__profession {
     color: var(--second-main);
     font-weight: 400;
     font-size: 16px;
@@ -525,29 +520,28 @@ footer {
     text-align: center;
     margin-bottom: 16px;
 }
-.team-connection {
 
-}
-.team-connect-list {
+
+.connect-list {
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
 }
-.team-connect-item {
+.connect-list__item {
     width: 44px;
     height: 44px;
     border-radius: 50%;
     margin-right: 10px;
     text-align: center;
 }
-.team-connect-sending {
+.connect-list__link {
     transition-property: fill;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
-.team-connect-item:hover,
-.team-connect-item:focus {
+.connect-list__item:hover,
+.connect-list__item:focus {
     background-color: var(--sending);
     opacity: 1;
     fill: var(--main);
@@ -555,12 +549,12 @@ footer {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 } 
-.team-connect-icon:hover,
-.team-connect-icon:focus {
+.connect-list__icon:hover,
+.connect-list__icon:focus {
     fill: var(--main);
     opacity: 1;
 }
-.team-connect-icon {
+.connect-list__icon {
     text-align: center;
     width: 44px;
     height: 44px;
@@ -572,7 +566,7 @@ footer {
 
 .clients {
 }
-.clients-head {
+.clients__head {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
@@ -584,14 +578,13 @@ footer {
 .clients-list {
     display: flex;
 }
-.clients-item {
+.clients-list__item {
     margin-right: 30px;
     text-align: center;
 }
-.clients-sending {
 
-}
-.clients-icon {
+
+.clients-list__icon {
     width: 170px;
     height: 92px;
     fill: var(--iconcolor);
@@ -599,8 +592,8 @@ footer {
     border-radius: 4px;
     border: 1px solid var(--border-three);
 }
-.clients-icon:hover,
-.clients-icon:focus {
+.clients-list__icon:hover,
+.clients-list__icon:focus {
     fill: var(--sending);
     fill-opacity: 1;
     border: 1px solid var(--sending);
@@ -611,13 +604,13 @@ footer {
 
 /*--------------------------------------PORTFOLIO-------------------------------------------*/
 
-.portfolio-buttons {
+.btn-list {
+    display: flex;
     justify-content: center;
     margin-bottom: 50px;
     margin-top: 0;
 }
-.button-active,
-.second-buttons {
+.btn-list__btn {
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
@@ -627,19 +620,16 @@ footer {
     border: none;
     margin-right: 8px;
     border-radius: 4px;
-}
-.button-active {
-    color: var(--main);
-    background-color: var(--sending);
-}
-.second-buttons {
     color: var(--main-text-color);
     background-color: var(--second-back);
 }
-.button-active:hover,
-.second-buttons:hover,
-.button-active:focus,
-.second-buttons:focus {
+.btn-list__btn--active {
+    color: var(--main);
+    background-color: var(--sending);
+}
+
+.btn-list__btn:hover,
+.btn-list__btn:focus {
     background-color: var(--sending);
     color: var(--main);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -647,18 +637,18 @@ footer {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }  
-.portfolio-menu {
+.portfolio-list__link {
     text-decoration: none;
     display: block;
 }
-.portfolio-menu-overlay {
+.portfolio-list__overlay {
     position: relative;
     overflow: hidden;
 }
-.portfolio-menu-img {
+.portfolio-list__img {
     margin-bottom: 0;
 }
-.portfolio-menu-text {
+.portfolio-list__text-div {
     border-left: 1px solid var(--border-two);
     border-right: 1px solid var(--border-two);
     border-bottom: 1px solid var(--border-two);
@@ -671,23 +661,23 @@ footer {
     margin-left: -30px;
     margin-top: -30px;
 }
-.portfolio-item {
+.portfolio-list__item {
     margin-top: 30px;
     margin-left: 30px;
 }
-.portfolio-menu:hover {
+.portfolio-list__link:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
     transition-property: box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-menu:hover .portfolio-overlay {
+.portfolio-list__link:hover .portfolio-list__overlay-text {
     transform: translateY(0);
     transition-property: transform;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-list-head {
+.portfolio-list__head {
     color: var(--main-text-color);
     font-weight: 700;
     font-size: 18px;
@@ -695,13 +685,13 @@ footer {
     letter-spacing: 0.06em;
     margin-bottom: 4px;
 }
-.portfolio-list-text {
+.portfolio-list__text {
     color: var(--second-main);
     font-weight: 400;
     font-size: 16px;
     line-height: 1.9;
 }
-.portfolio-overlay {
+.portfolio-list__overlay-text {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -750,11 +740,8 @@ footer {
     border-radius: 4px;
     align-items: center;
     padding: 40px;
-
-
 }
-.modal-main-text {
-}
+
 .modal-close-btn {
     position: absolute;
     top: 8px;
@@ -766,7 +753,7 @@ footer {
     background-color: transparent;
     justify-content: center;
 }
-.modal-close-btn-icon {
+.modal-close-btn__icon {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -777,12 +764,13 @@ footer {
     text-align: center;
 }
 
-.modal-close-btn-icon:hover, .modal-close-btn-icon:focus {
+.modal-close-btn__icon:hover,
+.modal-close-btn__icon:focus {
     fill: var(--sending);
 }
 
 
-.modal-top-text {
+.modal-main__top-text {
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
@@ -793,7 +781,7 @@ footer {
     margin-bottom: 12px;
 }
 
-.modal-label {
+.modal-form__label {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -803,7 +791,7 @@ footer {
     color: var(--second-main);
 }
 
-.modal-input {
+.modal-form__input {
     height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
@@ -816,12 +804,12 @@ footer {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:hover, .modal-input:focus {
+.modal-form__input:hover, .modal-form__input:focus {
         border: 1px solid var(--sending);
         outline: var(--sending);
 }
 
-.modal-textarea {
+.modal-form__textarea {
     height: 120px;
     width: 100%;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -835,12 +823,13 @@ footer {
             transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-textarea:hover, .modal-textarea:focus{
+.modal-form__textarea:hover, 
+.modal-form__textarea:focus{
             border: 1px solid var(--sending);
             outline: var(--sending);
 
 }
-.modal-textarea:placeholder {
+.modal-form__textarea:placeholder {
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -849,11 +838,11 @@ footer {
     color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-div {
+.modal-form__div {
     position: relative;
 }
 
-.modal-name-icon {
+.modal-form__icon {
     position: absolute;
     width: 18px;
     height: 18px;
@@ -863,13 +852,13 @@ footer {
     transform: translateY(-50%);
 }
 
-.modal-input:hover,
-.modal-input:focus + .modal-name-icon {
+.modal-form__input:hover,
+.modal-form__input:focus + .modal-form__icon {
     fill: var(--sending);
 }
 
 
-.modal-button {
+.modal-form__btn {
     color: var(--main);
     background-color: var(--sending);
     font-family: inherit;
@@ -887,7 +876,7 @@ footer {
 }
 
 
-.modal-check-text {
+.modal-form__check-text {
         font-weight: 400;
         font-size: 14px;
         line-height: 1.7;
@@ -895,13 +884,13 @@ footer {
         color: var(--second-main);
 }
 
-.modal-check-span {
+.modal-form__check-span {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.modal-check-span::before {
+.modal-form__check-span::before {
     content: '';
     width: 16px;
     height: 15px;
@@ -914,13 +903,13 @@ footer {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-check-span:focus::before,
-.modal-check-span:hover::before {
+.modal-form__check-span:focus::before,
+.modal-form__span:hover::before {
     border: 2px solid var(--sending);
 
 }
 
-.checkbox:checked + .modal-check-span::before {
+.checkbox:checked + .modal-form__check-span::before {
     background-origin: border-box;
     background-size: contain;
     background-position: center;
@@ -929,13 +918,13 @@ footer {
     background-image: url('../images/iconcheck.svg');
 }
 
-.checkbox:hover + .modal-check-span::before,
-.checkbox:focus +.modal-check-span::before {
+.checkbox:hover + .modal-form__check-span::before,
+.checkbox:focus +.modal-form__check-span::before {
     border: 2px solid var(--sending);
 }
 
 
-.modal-link {
+.modal-form__link {
         font-weight: 400;
         font-size: 14px;
         line-height: 1.7;
